Anamoly detecton in chart

--- a/StarmeterSparkLog.ipynb
+++ b/StarmeterSparkLog.ipynb
@@ -2,79 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "24/09/08 12:22:38 WARN Utils: Your hostname, Zipcoders-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.0.0.222 instead (on interface en0)\n",
-      "24/09/08 12:22:38 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "24/09/08 12:22:38 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "24/09/08 12:22:38 WARN DependencyUtils: Local jar /Users/timl/Projects/Final Project/CapStone/Notebooks/jars/mysql-connector-java-8.4.0.jar does not exist, skipping.\n",
-      "24/09/08 12:22:38 INFO SparkContext: Running Spark version 3.5.2\n",
-      "24/09/08 12:22:38 INFO SparkContext: OS info Mac OS X, 12.4, aarch64\n",
-      "24/09/08 12:22:38 INFO SparkContext: Java version 22.0.1\n",
-      "24/09/08 12:22:38 INFO ResourceUtils: ==============================================================\n",
-      "24/09/08 12:22:38 INFO ResourceUtils: No custom resources configured for spark.driver.\n",
-      "24/09/08 12:22:38 INFO ResourceUtils: ==============================================================\n",
-      "24/09/08 12:22:38 INFO SparkContext: Submitted application: StarMeter\n",
-      "24/09/08 12:22:38 INFO ResourceProfile: Default ResourceProfile created, executor resources: Map(cores -> name: cores, amount: 1, script: , vendor: , memory -> name: memory, amount: 1024, script: , vendor: , offHeap -> name: offHeap, amount: 0, script: , vendor: ), task resources: Map(cpus -> name: cpus, amount: 1.0)\n",
-      "24/09/08 12:22:38 INFO ResourceProfile: Limiting resource is cpu\n",
-      "24/09/08 12:22:38 INFO ResourceProfileManager: Added ResourceProfile id: 0\n",
-      "24/09/08 12:22:39 INFO SecurityManager: Changing view acls to: timl\n",
-      "24/09/08 12:22:39 INFO SecurityManager: Changing modify acls to: timl\n",
-      "24/09/08 12:22:39 INFO SecurityManager: Changing view acls groups to: \n",
-      "24/09/08 12:22:39 INFO SecurityManager: Changing modify acls groups to: \n",
-      "24/09/08 12:22:39 INFO SecurityManager: SecurityManager: authentication disabled; ui acls disabled; users with view permissions: timl; groups with view permissions: EMPTY; users with modify permissions: timl; groups with modify permissions: EMPTY\n",
-      "24/09/08 12:22:39 INFO Utils: Successfully started service 'sparkDriver' on port 63301.\n",
-      "24/09/08 12:22:39 INFO SparkEnv: Registering MapOutputTracker\n",
-      "24/09/08 12:22:39 INFO SparkEnv: Registering BlockManagerMaster\n",
-      "24/09/08 12:22:39 INFO BlockManagerMasterEndpoint: Using org.apache.spark.storage.DefaultTopologyMapper for getting topology information\n",
-      "24/09/08 12:22:39 INFO BlockManagerMasterEndpoint: BlockManagerMasterEndpoint up\n",
-      "24/09/08 12:22:39 INFO SparkEnv: Registering BlockManagerMasterHeartbeat\n",
-      "24/09/08 12:22:39 INFO DiskBlockManager: Created local directory at /private/var/folders/fn/3w5085ns7nv4v62cfvj7m9sm0000gp/T/blockmgr-f0616859-192b-4e13-8d92-04441ffc91d4\n",
-      "24/09/08 12:22:39 INFO MemoryStore: MemoryStore started with capacity 434.4 MiB\n",
-      "24/09/08 12:22:39 INFO SparkEnv: Registering OutputCommitCoordinator\n",
-      "24/09/08 12:22:39 INFO JettyUtils: Start Jetty 0.0.0.0:4040 for SparkUI\n",
-      "24/09/08 12:22:39 INFO Utils: Successfully started service 'SparkUI' on port 4040.\n",
-      "24/09/08 12:22:39 ERROR SparkContext: Failed to add jars/mysql-connector-java-8.4.0.jar to Spark environment\n",
-      "java.io.FileNotFoundException: Jar /Users/timl/Projects/Final Project/CapStone/Notebooks/jars/mysql-connector-java-8.4.0.jar not found\n",
-      "\tat org.apache.spark.SparkContext.addLocalJarFile$1(SparkContext.scala:2095)\n",
-      "\tat org.apache.spark.SparkContext.addJar(SparkContext.scala:2151)\n",
-      "\tat org.apache.spark.SparkContext.$anonfun$new$15(SparkContext.scala:521)\n",
-      "\tat org.apache.spark.SparkContext.$anonfun$new$15$adapted(SparkContext.scala:521)\n",
-      "\tat scala.collection.mutable.ResizableArray.foreach(ResizableArray.scala:62)\n",
-      "\tat scala.collection.mutable.ResizableArray.foreach$(ResizableArray.scala:55)\n",
-      "\tat scala.collection.mutable.ArrayBuffer.foreach(ArrayBuffer.scala:49)\n",
-      "\tat org.apache.spark.SparkContext.<init>(SparkContext.scala:521)\n",
-      "\tat org.apache.spark.api.java.JavaSparkContext.<init>(JavaSparkContext.scala:58)\n",
-      "\tat java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)\n",
-      "\tat java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)\n",
-      "\tat java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)\n",
-      "\tat py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:247)\n",
-      "\tat py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:374)\n",
-      "\tat py4j.Gateway.invoke(Gateway.java:238)\n",
-      "\tat py4j.commands.ConstructorCommand.invokeConstructor(ConstructorCommand.java:80)\n",
-      "\tat py4j.commands.ConstructorCommand.execute(ConstructorCommand.java:69)\n",
-      "\tat py4j.ClientServerConnection.waitForCommands(ClientServerConnection.java:182)\n",
-      "\tat py4j.ClientServerConnection.run(ClientServerConnection.java:106)\n",
-      "\tat java.base/java.lang.Thread.run(Thread.java:1570)\n",
-      "24/09/08 12:22:39 INFO Executor: Starting executor ID driver on host 10.0.0.222\n",
-      "24/09/08 12:22:39 INFO Executor: OS info Mac OS X, 12.4, aarch64\n",
-      "24/09/08 12:22:39 INFO Executor: Java version 22.0.1\n",
-      "24/09/08 12:22:39 INFO Executor: Starting executor with user classpath (userClassPathFirst = false): ''\n",
-      "24/09/08 12:22:39 INFO Executor: Created or updated repl class loader org.apache.spark.util.MutableURLClassLoader@4db58ac for default.\n",
-      "24/09/08 12:22:39 INFO Utils: Successfully started service 'org.apache.spark.network.netty.NettyBlockTransferService' on port 63302.\n",
-      "24/09/08 12:22:39 INFO NettyBlockTransferService: Server created on 10.0.0.222:63302\n",
-      "24/09/08 12:22:39 INFO BlockManager: Using org.apache.spark.storage.RandomBlockReplicationPolicy for block replication policy\n",
-      "24/09/08 12:22:39 INFO BlockManagerMaster: Registering BlockManager BlockManagerId(driver, 10.0.0.222, 63302, None)\n",
-      "24/09/08 12:22:39 INFO BlockManagerMasterEndpoint: Registering block manager 10.0.0.222:63302 with 434.4 MiB RAM, BlockManagerId(driver, 10.0.0.222, 63302, None)\n",
-      "24/09/08 12:22:39 INFO BlockManagerMaster: Registered BlockManager BlockManagerId(driver, 10.0.0.222, 63302, None)\n",
-      "24/09/08 12:22:39 INFO BlockManager: Initialized BlockManager: BlockManagerId(driver, 10.0.0.222, 63302, None)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -90,80 +20,17 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x133ed7320>"
+       "<IPython.lib.display.IFrame at 0x11fa24200>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error retrieving data: An error occurred while calling o34.load.\n",
-      ": java.lang.ClassNotFoundException: com.mysql.cj.jdbc.Driver\n",
-      "\tat java.base/java.net.URLClassLoader.findClass(URLClassLoader.java:445)\n",
-      "\tat java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:592)\n",
-      "\tat java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:525)\n",
-      "\tat org.apache.spark.sql.execution.datasources.jdbc.DriverRegistry$.register(DriverRegistry.scala:46)\n",
-      "\tat org.apache.spark.sql.execution.datasources.jdbc.JDBCOptions.$anonfun$driverClass$1(JDBCOptions.scala:103)\n",
-      "\tat org.apache.spark.sql.execution.datasources.jdbc.JDBCOptions.$anonfun$driverClass$1$adapted(JDBCOptions.scala:103)\n",
-      "\tat scala.Option.foreach(Option.scala:407)\n",
-      "\tat org.apache.spark.sql.execution.datasources.jdbc.JDBCOptions.<init>(JDBCOptions.scala:103)\n",
-      "\tat org.apache.spark.sql.execution.datasources.jdbc.JDBCOptions.<init>(JDBCOptions.scala:41)\n",
-      "\tat org.apache.spark.sql.execution.datasources.jdbc.JdbcRelationProvider.createRelation(JdbcRelationProvider.scala:34)\n",
-      "\tat org.apache.spark.sql.execution.datasources.DataSource.resolveRelation(DataSource.scala:346)\n",
-      "\tat org.apache.spark.sql.DataFrameReader.loadV1Source(DataFrameReader.scala:229)\n",
-      "\tat org.apache.spark.sql.DataFrameReader.$anonfun$load$2(DataFrameReader.scala:211)\n",
-      "\tat scala.Option.getOrElse(Option.scala:189)\n",
-      "\tat org.apache.spark.sql.DataFrameReader.load(DataFrameReader.scala:211)\n",
-      "\tat org.apache.spark.sql.DataFrameReader.load(DataFrameReader.scala:172)\n",
-      "\tat java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)\n",
-      "\tat java.base/java.lang.reflect.Method.invoke(Method.java:580)\n",
-      "\tat py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\n",
-      "\tat py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:374)\n",
-      "\tat py4j.Gateway.invoke(Gateway.java:282)\n",
-      "\tat py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\n",
-      "\tat py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
-      "\tat py4j.ClientServerConnection.waitForCommands(ClientServerConnection.java:182)\n",
-      "\tat py4j.ClientServerConnection.run(ClientServerConnection.java:106)\n",
-      "\tat java.base/java.lang.Thread.run(Thread.java:1570)\n",
-      "\n",
-      "Error in updating graph and KPIs: An error occurred while calling o42.load.\n",
-      ": java.lang.ClassNotFoundException: com.mysql.cj.jdbc.Driver\n",
-      "\tat java.base/java.net.URLClassLoader.findClass(URLClassLoader.java:445)\n",
-      "\tat java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:592)\n",
-      "\tat java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:525)\n",
-      "\tat org.apache.spark.sql.execution.datasources.jdbc.DriverRegistry$.register(DriverRegistry.scala:46)\n",
-      "\tat org.apache.spark.sql.execution.datasources.jdbc.JDBCOptions.$anonfun$driverClass$1(JDBCOptions.scala:103)\n",
-      "\tat org.apache.spark.sql.execution.datasources.jdbc.JDBCOptions.$anonfun$driverClass$1$adapted(JDBCOptions.scala:103)\n",
-      "\tat scala.Option.foreach(Option.scala:407)\n",
-      "\tat org.apache.spark.sql.execution.datasources.jdbc.JDBCOptions.<init>(JDBCOptions.scala:103)\n",
-      "\tat org.apache.spark.sql.execution.datasources.jdbc.JDBCOptions.<init>(JDBCOptions.scala:41)\n",
-      "\tat org.apache.spark.sql.execution.datasources.jdbc.JdbcRelationProvider.createRelation(JdbcRelationProvider.scala:34)\n",
-      "\tat org.apache.spark.sql.execution.datasources.DataSource.resolveRelation(DataSource.scala:346)\n",
-      "\tat org.apache.spark.sql.DataFrameReader.loadV1Source(DataFrameReader.scala:229)\n",
-      "\tat org.apache.spark.sql.DataFrameReader.$anonfun$load$2(DataFrameReader.scala:211)\n",
-      "\tat scala.Option.getOrElse(Option.scala:189)\n",
-      "\tat org.apache.spark.sql.DataFrameReader.load(DataFrameReader.scala:211)\n",
-      "\tat org.apache.spark.sql.DataFrameReader.load(DataFrameReader.scala:172)\n",
-      "\tat java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)\n",
-      "\tat java.base/java.lang.reflect.Method.invoke(Method.java:580)\n",
-      "\tat py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\n",
-      "\tat py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:374)\n",
-      "\tat py4j.Gateway.invoke(Gateway.java:282)\n",
-      "\tat py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\n",
-      "\tat py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
-      "\tat py4j.ClientServerConnection.waitForCommands(ClientServerConnection.java:182)\n",
-      "\tat py4j.ClientServerConnection.run(ClientServerConnection.java:106)\n",
-      "\tat java.base/java.lang.Thread.run(Thread.java:1570)\n",
-      "\n"
-     ]
     }
    ],
    "source": [
     "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import time\n",
     "import dash\n",
     "from pyspark.sql.functions import desc\n",
@@ -214,8 +81,8 @@
     "        .option(\"url\", \"jdbc:mysql://localhost:3306/starmeter\") \\\n",
     "        .option(\"driver\", \"com.mysql.cj.jdbc.Driver\") \\\n",
     "        .option(\"dbtable\", \"event_log\") \\\n",
-    "        .option(\"user\", \"root\") \\\n",
-    "        .option(\"password\", \"zipcode123\") \\\n",
+    "        .option(\"user\", \"timlinkous\") \\\n",
+    "        .option(\"password\", \"zipcode1\") \\\n",
     "        .load()\n",
     "\n",
     "    # Convert to Pandas DataFrame and select necessary columns\n",
@@ -223,26 +90,36 @@
     "        .orderBy(F.desc(\"event_date\")) \\\n",
     "        .limit(10) \\\n",
     "        .toPandas()\n",
-    "\n",
-    "      # Calculate fan_count_change\n",
+    "    \n",
+    "    # Calculate fan_count_change\n",
     "    pdf['fan_count_change'] = pdf['current_fan_count'].diff().fillna(0).astype(int)\n",
+    "    \n",
+    "    # Calculate percent change\n",
+    "    pdf['percent_change'] = (pdf['fan_count_change'] / pdf['current_fan_count'].shift(1)) * 100\n",
+    "    \n",
+    "    # Detect anomalies (changes >= 15%)\n",
+    "    pdf['is_anomaly'] = np.abs(pdf['percent_change']) >= 15\n",
     "    \n",
     "    # Create the event log HTML using Dash components with specified font sizes\n",
     "    event_log_html = html.Div([\n",
-    "        html.H4(\"Event Log\", style={'fontSize': '20px', 'marginBottom': '10px'}),  # Set font size for the header\n",
+    "        html.H4(\"Event Log\", style={'fontSize': '20px', 'marginBottom': '10px'}),\n",
     "        html.Table([\n",
     "            html.Thead(html.Tr([\n",
     "                html.Th(\"Date\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
     "                html.Th(\"Celebrity\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
     "                html.Th(\"Event\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
-    "                html.Th(\"Change\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'})\n",
+    "                html.Th(\"Change\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
+    "                html.Th(\"% Change\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'}),\n",
+    "                html.Th(\"Anomaly\", style={'fontSize': '12px', 'fontWeight': 'bold', 'padding': '5px'})\n",
     "            ])),\n",
     "            html.Tbody([\n",
     "                html.Tr([\n",
     "                    html.Td(row['event_date'].strftime('%Y-%m-%d'), style={'fontSize': '12px', 'padding': '5px'}),\n",
     "                    html.Td(row['celebrity'], style={'fontSize': '12px', 'padding': '5px'}),\n",
     "                    html.Td(row['event_description'], style={'fontSize': '12px', 'padding': '5px'}),\n",
-    "                    html.Td(f\"{row['fan_count_change']:+d}\", style={'fontSize': '12px', 'padding': '5px', 'color': 'green' if row['fan_count_change'] > 0 else 'red' if row['fan_count_change'] < 0 else 'black'})\n",
+    "                    html.Td(f\"{row['fan_count_change']:+d}\", style={'fontSize': '12px', 'padding': '5px', 'color': 'green' if row['fan_count_change'] > 0 else 'red' if row['fan_count_change'] < 0 else 'black'}),\n",
+    "                    html.Td(f\"{row['percent_change']:.2f}%\", style={'fontSize': '12px', 'padding': '5px'}),\n",
+    "                    html.Td(\"ALERT\" if row['is_anomaly'] else \"\", style={'fontSize': '12px', 'padding': '5px', 'color': 'red', 'fontWeight': 'bold'})\n",
     "                ]) for _, row in pdf.iterrows()\n",
     "            ])\n",
     "        ], style={'width': '100%', 'textAlign': 'left', 'borderCollapse': 'collapse'})\n",
@@ -486,21 +363,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'spark' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mspark\u001b[49m\u001b[38;5;241m.\u001b[39mstop()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'spark' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark.stop()"
    ]
