Flask app bare-bones web page partly working

--- a/StarmeterSparkLog.ipynb
+++ b/StarmeterSparkLog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -22,7 +22,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1112d40b0>"
+       "<IPython.lib.display.IFrame at 0x127af8290>"
       ]
      },
      "metadata": {},
@@ -55,7 +55,7 @@
     "            .option(\"url\", \"jdbc:mysql://127.0.0.1:3306/starmeter_sim\") \\\n",
     "            .option(\"dbtable\", \"user_dynamic_preferences\") \\\n",
     "            .option(\"user\", \"root\") \\\n",
-    "            .option(\"password\", \"zipcode123\") \\\n",
+    "            .option(\"password\", \"mypass\") \\\n",
     "            .option(\"driver\", \"com.mysql.cj.jdbc.Driver\") \\\n",
     "            .load()\n",
     "\n",
@@ -82,7 +82,7 @@
     "        .option(\"driver\", \"com.mysql.cj.jdbc.Driver\") \\\n",
     "        .option(\"dbtable\", \"event_log\") \\\n",
     "        .option(\"user\", \"root\") \\\n",
-    "        .option(\"password\", \"zipcode123\") \\\n",
+    "        .option(\"password\", \"mypass\") \\\n",
     "        .load()\n",
     "\n",
     "    # Convert to Pandas DataFrame and select necessary columns\n",
@@ -194,6 +194,7 @@
     "     Output('event-log', 'children')],  # Add this output for the event log\n",
     "    Input('interval-component', 'n_intervals')\n",
     ")\n",
+    "\n",
     "def update_graph_and_kpis(n):\n",
     "    global time_data, fan_counts_data\n",
     "\n",
@@ -351,10 +352,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "spark.stop()"
+   ]
   },
   {
    "cell_type": "code",
