fixed bug in eventlog table

--- a/StarmeterSparkLog copy.ipynb
+++ b/StarmeterSparkLog copy.ipynb
@@ -2,33 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8050/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x13123d520>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'for' statement on line 230 (2897852214.py, line 231)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 231\u001b[0;36m\u001b[0m\n\u001b[0;31m    line_fig.add_trace(go.Scatter(\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'for' statement on line 230\n"
+     ]
     }
    ],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import time\n",
@@ -39,7 +25,6 @@
     "from dash import dcc, html, Output, Input, State\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as F\n",
-    "from dash import dcc, html, Input, Output, State\n",
     "\n",
     "# Initialize SparkSession\n",
     "spark = SparkSession.builder \\\n",
@@ -73,8 +58,6 @@
     "        print(f\"Error retrieving data: {e}\")\n",
     "        return pd.DataFrame(columns=['current_favorite', 'fan_count'])\n",
     "\n",
-    "\n",
-    "\n",
     "def fetch_and_calculate_changes():\n",
     "    # Fetch data from MySQL\n",
     "    df = spark.read.format(\"jdbc\") \\\n",
@@ -85,20 +68,17 @@
     "        .option(\"password\", \"zipcode1\") \\\n",
     "        .load()\n",
     "\n",
-    "     # Convert to Pandas DataFrame and select necessary columns\n",
-    "    pdf = df.select(\"event_date\", \"celebrity\", \"event_description\", \"current_fan_count\") \\\n",
+    "    # Convert to Pandas DataFrame and select necessary columns\n",
+    "    pdf = df.select(\"event_date\", \"celebrity\", \"event_description\", \"current_fan_count\", \"event_type\") \\\n",
     "        .orderBy(F.desc(\"event_date\")) \\\n",
-    "        .limit(10) \\\n",
-    "        .toPandas()\n",
-    "    \n",
-    "    # Sort by date in descending order\n",
-    "    pdf = pdf.sort_values('event_date', ascending=False).reset_index(drop=True)\n",
+    "        .limit(100)  # Increase limit to get more data for correlation\n",
+    "    pdf = pdf.toPandas()\n",
     "    \n",
     "    # Calculate fan_count_change\n",
-    "    pdf['fan_count_change'] = pdf['current_fan_count'].diff(-1).fillna(0).astype(int)\n",
+    "    pdf['fan_count_change'] = pdf.groupby('celebrity')['current_fan_count'].diff().fillna(0).astype(int)\n",
     "    \n",
     "    # Calculate percent change\n",
-    "    pdf['percent_change'] = (pdf['fan_count_change'] / pdf['current_fan_count'].shift(-1)) * 100\n",
+    "    pdf['percent_change'] = (pdf['fan_count_change'] / pdf['current_fan_count'].shift(1)) * 100\n",
     "    \n",
     "    # Detect anomalies (changes >= 15%)\n",
     "    pdf['is_anomaly'] = np.abs(pdf['percent_change']) >= 15\n",
@@ -128,8 +108,19 @@
     "        ], style={'width': '100%', 'textAlign': 'left', 'borderCollapse': 'collapse'})\n",
     "    ])\n",
     "    \n",
-    "    return event_log_html\n",
+    "    return event_log_html, pdf\n",
     "\n",
+    "def calculate_event_correlations(df):\n",
+    "    event_types = ['E1', 'E2', 'E3', 'E4', 'E5', 'E6', 'E7', 'E8', 'E9', 'E10', 'E11', 'E12', 'E13', 'E14', 'E15', 'E16', 'E17', 'E18', 'E19', 'E20', 'E21', 'E22', 'E23', 'E24', 'E25', 'E26', 'E27', 'E28', 'E29', 'SC1', 'SC2', 'SC3', 'SC4', 'SC5', 'SD1', 'SD2', 'SD3', 'SD4', 'SD5', 'T1', 'T2', 'T3', 'T4', 'L1', 'L2', 'L3', 'L4', 'L5', 'L6']\n",
+    "    \n",
+    "    correlations = []\n",
+    "    for event_type in event_types:\n",
+    "        event_occurrences = (df['event_type'] == event_type).astype(int)\n",
+    "        correlation = event_occurrences.corr(df['fan_count_change'])\n",
+    "        correlations.append((event_type, correlation))\n",
+    "    \n",
+    "    correlations.sort(key=lambda x: abs(x[1]), reverse=True)\n",
+    "    return correlations[:10]  # Return top 10 correlations\n",
     "\n",
     "# Initialize Dash app\n",
     "app = dash.Dash(__name__, external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
@@ -182,7 +173,8 @@
     "    ]),\n",
     "    \n",
     "    dbc.Row([\n",
-    "        dbc.Col(dcc.Graph(id='bar-chart'), width=12)\n",
+    "        dbc.Col(dcc.Graph(id='bar-chart'), width=6),\n",
+    "        dbc.Col(dcc.Graph(id='correlation-chart'), width=6)\n",
     "    ]),\n",
     "    \n",
     "    dcc.Interval(\n",
@@ -200,11 +192,12 @@
     "@app.callback(\n",
     "    [Output('live-update-graph', 'figure'),\n",
     "     Output('bar-chart', 'figure'),\n",
+    "     Output('correlation-chart', 'figure'),\n",
     "     Output('total-fans', 'children'),\n",
     "     Output('most-popular-celebrity', 'children'),\n",
     "     Output('average-fans', 'children'),\n",
     "     Output('total-events', 'children'),\n",
-    "     Output('event-log', 'children')],  # Add this output for the event log\n",
+    "     Output('event-log', 'children')],\n",
     "    Input('interval-component', 'n_intervals')\n",
     ")\n",
     "def update_graph_and_kpis(n):\n",
@@ -212,8 +205,8 @@
     "\n",
     "    try:\n",
     "        # Fetch latest fan counts and event log using Spark\n",
-    "        fan_counts_df = get_fan_counts()  # Fetch fan counts\n",
-    "        event_log_html = fetch_and_calculate_changes()  # Fetch event log data\n",
+    "        fan_counts_df = get_fan_counts()\n",
+    "        event_log_html, event_data = fetch_and_calculate_changes()\n",
     "\n",
     "        # Initialize KPI variables\n",
     "        total_fans = 0\n",
@@ -251,96 +244,107 @@
     "            \n",
     "            # Create traces for each celebrity in the line chart\n",
     "            line_fig = go.Figure()\n",
-    "            for idx, (celebrity, fan_counts) in enumerate(fan_counts_data.items()):\n",
-    "                line_fig.add_trace(go.Scatter(\n",
-    "                    x=time_data,\n",
-    "                    y=fan_counts,\n",
-    "                    mode='lines+markers',\n",
-    "                    name=celebrity,\n",
-    "                    marker=dict(size=5, color=colors[idx]),\n",
-    "                    line=dict(color=colors[idx]),\n",
-    "                    text=['Event happened here'] * len(fan_counts),\n",
-    "                    hoverinfo='text',\n",
-    "                    customdata=list(range(len(fan_counts))),  # Index of the markers\n",
-    "                ))\n",
+    "                for idx, (celebrity, fan_counts) in enumerate(fan_counts_data.items()):\n",
+    "                    line_fig.add_trace(go.Scatter(\n",
+    "                x=time_data,\n",
+    "                y=fan_counts,\n",
+    "                mode='lines+markers',\n",
+    "                name=celebrity,\n",
+    "                marker=dict(size=5, color=colors[idx]),\n",
+    "                line=dict(color=colors[idx]),\n",
+    "                text=['Event happened here'] * len(fan_counts),\n",
+    "                hoverinfo='text',\n",
+    "                customdata=list(range(len(fan_counts))),  # Index of the markers\n",
+    "            ))\n",
     "\n",
-    "            # Ensure time_data has enough data points to set range\n",
-    "            if len(time_data) > 1:\n",
-    "                line_fig.update_layout(\n",
-    "                    xaxis=dict(range=[max(time_data) - 100, max(time_data)]),\n",
-    "                )\n",
-    "\n",
+    "        # Ensure time_data has enough data points to set range\n",
+    "        if len(time_data) > 1:\n",
     "            line_fig.update_layout(\n",
-    "                xaxis=dict(\n",
-    "                    range=[max(0, max(time_data) - 100), max(time_data)],\n",
-    "                    fixedrange=True,  # Prevents zooming/panning from affecting range\n",
-    "                    showticklabels=False,  # Hides x-axis labels\n",
-    "                ),\n",
-    "                xaxis_title='Time (Days)',\n",
-    "                yaxis_title='Number of Fans (in thousands)',\n",
-    "                margin=dict(l=0, r=0, t=40, b=0),  # Adjust margins to fit the layout\n",
-    "                autosize=False,  # Disable autosize to fix width\n",
-    "                width=900,  # Set the desired width\n",
-    "                height=400,  # Set the desired height\n",
-    "                showlegend=True,\n",
-    "                legend=dict(\n",
-    "                    orientation='h',  # Horizontal orientation\n",
-    "                    yanchor='bottom',\n",
-    "                    y=1.15,\n",
-    "                    xanchor='right',\n",
-    "                    x=1\n",
-    "                ),\n",
-    "                modebar=dict(\n",
-    "                    remove=['zoom', 'pan', 'select', 'zoomIn', 'zoomOut', 'autoScale', 'resetScale2d', 'lasso2d', 'zoom2d', 'resetScale', 'toImage', 'plotly_logo']\n",
-    "                )\n",
+    "                xaxis=dict(range=[max(time_data) - 100, max(time_data)]),\n",
     "            )\n",
     "\n",
+    "        line_fig.update_layout(\n",
+    "            xaxis=dict(\n",
+    "                range=[max(0, max(time_data) - 100), max(time_data)],\n",
+    "                fixedrange=True,  # Prevents zooming/panning from affecting range\n",
+    "                showticklabels=False,  # Hides x-axis labels\n",
+    "            ),\n",
+    "            xaxis_title='Time (Days)',\n",
+    "            yaxis_title='Number of Fans (in thousands)',\n",
+    "            margin=dict(l=0, r=0, t=40, b=0),  # Adjust margins to fit the layout\n",
+    "            autosize=False,  # Disable autosize to fix width\n",
+    "            width=900,  # Set the desired width\n",
+    "            height=400,  # Set the desired height\n",
+    "            showlegend=True,\n",
+    "            legend=dict(\n",
+    "                orientation='h',  # Horizontal orientation\n",
+    "                yanchor='bottom',\n",
+    "                y=1.15,\n",
+    "                xanchor='right',\n",
+    "                x=1\n",
+    "            ),\n",
+    "            modebar=dict(\n",
+    "                remove=['zoom', 'pan', 'select', 'zoomIn', 'zoomOut', 'autoScale', 'resetScale2d', 'lasso2d', 'zoom2d', 'resetScale', 'toImage', 'plotly_logo']\n",
+    "            )\n",
+    "        )\n",
     "\n",
-    "            # Create bar chart for current fan counts\n",
-    "            bar_fig = go.Figure(data=[\n",
-    "                go.Bar(\n",
-    "                    x=list(fan_counts_data.keys()),\n",
-    "                    y=current_fan_counts,  # Use the latest counts\n",
-    "                    marker_color=colors,  # Match colors with the line graph\n",
-    "                    width=0.4  # Set the bar width; adjust as needed\n",
-    "                )\n",
-    "            ])\n",
-    "            # Set the y-axis range to the total current fans\n",
-    "            bar_fig.update_layout(\n",
-    "                title='Current Fans per Celebrity',\n",
-    "                xaxis_title='Celebrity',\n",
-    "                yaxis_title='Current Fans',\n",
-    "                yaxis=dict(range=[0, (total_fans/2)-1000]),  # Set range based on total fans\n",
-    "                margin=dict(l=40, r=40, t=40, b=80),  # Adjust margins to fit the layout\n",
-    "                autosize=True,\n",
-    "                width=400,  # Set the desired width\n",
-    "                height=400,  # Set the desired height\n",
-    "                showlegend=False,\n",
-    "                modebar=dict(\n",
-    "                    remove=['zoom', 'pan', 'select', 'zoomIn', 'zoomOut', 'autoScale', 'resetScale2d', 'lasso2d', 'zoom2d', 'resetScale', 'toImage', 'plotly_logo']\n",
-    "                )\n",
+    "        # Create bar chart for current fan counts\n",
+    "        bar_fig = go.Figure(data=[\n",
+    "            go.Bar(\n",
+    "                x=list(fan_counts_data.keys()),\n",
+    "                y=current_fan_counts,  # Use the latest counts\n",
+    "                marker_color=colors,  # Match colors with the line graph\n",
+    "                width=0.4  # Set the bar width; adjust as needed\n",
     "            )\n",
-    "            bar_fig.update_xaxes(tickangle=-45)  # Rotate x-axis labels if needed\n",
+    "        ])\n",
+    "        # Set the y-axis range to the total current fans\n",
+    "        bar_fig.update_layout(\n",
+    "            title='Current Fans per Celebrity',\n",
+    "            xaxis_title='Celebrity',\n",
+    "            yaxis_title='Current Fans',\n",
+    "            yaxis=dict(range=[0, (total_fans/2)-1000]),  # Set range based on total fans\n",
+    "            margin=dict(l=40, r=40, t=40, b=80),  # Adjust margins to fit the layout\n",
+    "            autosize=True,\n",
+    "            width=400,  # Set the desired width\n",
+    "            height=400,  # Set the desired height\n",
+    "            showlegend=False,\n",
+    "            modebar=dict(\n",
+    "                remove=['zoom', 'pan', 'select', 'zoomIn', 'zoomOut', 'autoScale', 'resetScale2d', 'lasso2d', 'zoom2d', 'resetScale', 'toImage', 'plotly_logo']\n",
+    "            )\n",
+    "        )\n",
+    "        bar_fig.update_xaxes(tickangle=-45)  # Rotate x-axis labels if needed\n",
     "\n",
-    "        else:\n",
-    "            line_fig = go.Figure().update_layout(\n",
-    "                title='No data available',\n",
-    "                xaxis_title='Time (seconds)',\n",
-    "                yaxis_title='Number of Fans'\n",
+    "        # Calculate correlations\n",
+    "        correlations = calculate_event_correlations(event_data)\n",
+    "\n",
+    "        # Create correlation chart\n",
+    "        corr_fig = go.Figure(data=[\n",
+    "            go.Bar(\n",
+    "                x=[corr[0] for corr in correlations],\n",
+    "                y=[corr[1] for corr in correlations],\n",
+    "                marker_color=['blue' if c > 0 else 'red' for _, c in correlations]\n",
     "            )\n",
-    "            bar_fig = go.Figure().update_layout(\n",
-    "                title='No data available',\n",
-    "                xaxis_title='Celebrity',\n",
-    "                yaxis_title='Current Fans'\n",
-    "            )\n",
+    "        ])\n",
+    "        corr_fig.update_layout(\n",
+    "            title='Top 10 Event Type Correlations with Fan Count Changes',\n",
+    "            xaxis_title='Event Type',\n",
+    "            yaxis_title='Correlation Coefficient',\n",
+    "            margin=dict(l=40, r=40, t=40, b=80),\n",
+    "            autosize=True,\n",
+    "            width=400,\n",
+    "            height=400,\n",
+    "            showlegend=False\n",
+    "        )\n",
+    "        corr_fig.update_xaxes(tickangle=-45)\n",
     "\n",
     "        average_fans = total_fans // len(fan_counts_data) if fan_counts_data else 0\n",
     "\n",
-    "        return line_fig, bar_fig, f'{total_fans}', most_popular_celeb or 'No data', f'{average_fans}', f'{total_events}', event_log_html\n",
+    "        return line_fig, bar_fig, corr_fig, f'{total_fans}', most_popular_celeb or 'No data', f'{average_fans}', f'{total_events}', event_log_html\n",
     "\n",
     "    except Exception as e:\n",
-    "        print(f\"Error in updating graph and KPIs: {e}\")\n",
-    "        return go.Figure().update_layout(title=\"Error updating graph\"), go.Figure().update_layout(title=\"Error updating graph\"), 'Error', 'Error', 'Error', 'Error', html.Div([\"Error updating event log\"])\n",
+    "        print(f\"Error in updating graph and KPIs: {str(e)}\")\n",
+    "        empty_fig = go.Figure().update_layout(title=\"No data available\")\n",
+    "        return empty_fig, empty_fig, empty_fig, 'Error', 'Error', 'Error', 'Error', html.Div([\"Error updating data\"])\n",
     "\n",
     "\n",
     "# Callback control start stop functionality\n",
@@ -350,7 +354,6 @@
     "    [Input('start-stop-button', 'n_clicks')],\n",
     "    [State('interval-component', 'disabled')]\n",
     ")\n",
-    "\n",
     "def toggle_interval(n_clicks, is_disabled):\n",
     "    # Toggle state interval (start stop updates)\n",
     "    if n_clicks % 2 == 0:\n",
@@ -359,14 +362,12 @@
     "        return False, 'Stop'  # enabled, show 'Stop' button text\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    app.run_server(debug=True)\n",
-    " \n",
-    " "
+    "    app.run_server(debug=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
